--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular Interactiva</h1>
+  <h1>Ciencia de Datos</h1>
   <div id="malla" class="malla"></div>
   <button onclick="resetProgreso()">🔄 Reiniciar Progreso</button>
   <script src="script.js"></script>
